syntax = "proto3";

package pulsey.protobuf;

option go_package="./;proto";
option csharp_namespace = "MultiplayerService";

service MultiplayerService {
  rpc RoomConnect(RoomConnectRequest) returns (RoomConnectResponse);
  rpc RoomStream(stream RoomStreamRequest) returns (stream RoomStreamResponse);
}

message Player {
  string id = 1;
  string name = 2;
  Coordinate position = 3;
  Direction direction = 5;
}

message Coordinate {
  float x = 1;
  float y = 2;
}

enum Direction {
  UP = 0;
  DOWN = 1;
  LEFT = 2;
  RIGHT = 3;
  STOP = 4;
}

message RoomStreamRequest {
  Player player = 1;
  uint64 room_id = 2;
}

message RoomStreamResponse {
  repeated Player players = 1;
}

message RoomConnectRequest{}
message RoomConnectResponse{}
